--- a/package.json
+++ b/package.json
@@ -2,47 +2,32 @@
   "name": "codetalk",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "firebase": "^5.9.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-loadable": "^5.5.0",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
-    "reselect": "^4.0.0"
-  },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "postinstall": "pika-web --dest src/web_modules",
+    "start": "lite-server --baseDir=src"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "src/**/*.{js}": [
       "prettier --write",
       "git add"
     ]
   },
+  "dependencies": {
+    "hybrids": "^2.0.2",
+    "page": "^1.11.4",
+    "redux": "^4.0.1"
+  },
   "devDependencies": {
-    "dotenv-expand": "^5.1.0",
+    "@pika/web": "^0.4.2",
+    "eslint": "^5.16.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "lite-server": "^2.4.0",
     "prettier": "^1.16.4"
   }
 }
